se agrega bootstrap y otros ajustes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
-<h1> App Vehiculos Segunda</h1>
+<h1> TuSegundazo.com</h1>
+
+<img src="assets/portada.png" alt="Imagen portada">
+
+
 
 <app-vehiculo></app-vehiculo>
+<!--TODO: PONER footer-->
+<p>footers</p>
