--- a/src/app/vehiculo/vehiculo-lista.component.html
+++ b/src/app/vehiculo/vehiculo-lista.component.html
@@ -1,1 +1,25 @@
-<p  *ngFor="let v of vehiculos"> {{v.marca}}</p>
+<div class="position-sticky">
+    <table class="table">
+        <thead class="black-header">
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Marca</th>
+                <th scope="col">Línea</th>
+                <th scope="col">Modelo</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let v of vehiculos">
+                <td>{{v.id}}</td>
+                <td>{{v.marca}}</td>
+                <td>{{v.linea}}</td>
+                <td>{{v.modelo}}</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+
+
+
+
+  
