--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,10 @@
 
 
 <app-vehiculo></app-vehiculo>
-<!--TODO: PONER footer-->
-<p>footers</p>
+
+<footer>
+    <div class="contact-info">
+      <p>Contact us: +57 3102105253 - <a href="mailto:info@tusegundazo.com">info@tusegundazo.com</a> - <a href="https://www.instagram.com/tusegundazo/">@tusegundazo</a></p>
+    </div>
+</footer>
+  
