--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,36 @@
-<h1> TuSegundazo.com</h1>
-
-<img src="assets/portada.png" alt="Imagen portada">
-
-
-
-<app-vehiculo></app-vehiculo>
-
-<footer>
-    <div class="contact-info">
-      <p>Contact us: +57 3102105253 - <a href="mailto:info@tusegundazo.com">info@tusegundazo.com</a> - <a href="https://www.instagram.com/tusegundazo/">@tusegundazo</a></p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-12">
+      <h1> TuSegundazo.com</h1>
     </div>
-</footer>
-  
+  </div>
+</div>
+
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-12">
+      <img src="assets/portada.png" alt="Imagen portada" class="img-fluid" id="imagen-portada">
+    </div>
+  </div>
+</div>
+<br>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-12">
+      <app-vehiculo></app-vehiculo>
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-12">
+      <footer>
+        <div class="contact-info">
+          <p>Contact us: +57 3102105253 - <a href="mailto:info@tusegundazo.com">info@tusegundazo.com</a> - <a href="https://www.instagram.com/tusegundazo/">@tusegundazo</a></p>
+        </div>
+      </footer>
+    </div>
+  </div>
+</div>
