--- a/src/app/vehiculo/vehiculo-lista.component.html
+++ b/src/app/vehiculo/vehiculo-lista.component.html
@@ -1,7 +1,8 @@
-<div class="container">
+
+<div class="container-fluid">
     <div class="row">
-      <div class="col-md-9">
-        <table class="table" test-id="table">
+      <div class="col 9">
+        <table class="table table-left" test-id="table">
             <thead >
                 <tr class="table-dark" test-id="table-header">
                     <th scope="col">#</th>
@@ -12,16 +13,17 @@
             </thead>
             <tbody>
                 <tr test-id="table-row" *ngFor="let v of vehiculos" >
-                    <td>{{v.id}}</td>
+                    <td style="font-weight: bold;">{{v.id}}</td>
                     <td>{{v.marca}}</td>
                     <td>{{v.linea}}</td>
                     <td>{{v.modelo}}</td>
                 </tr>
             </tbody>
         </table>
+        
         <p *ngFor="let marca of marcas">Total {{marca}} : {{numeroVehiculosMarca(marca)}}</p>
       </div>
-      <div class="col-md-3"></div>
+      <div class="col 3"></div>
     </div>
 </div>    
 
